        - Storage exceptions are thrown via the schema class's throw_exception
        - DBIx::Class::Schema::throw_exception's behavior can be modified via
          ->exception_action
        - columns_info_for is deprecated, and no longer runs automatically.
          You can make it work like before via
          __PACKAGE__->column_info_from_storage(1) for now

0.07003 2006-XX-XX XX:XX:XX
        - Tweaks to resultset to allow inflate_result to return an array
        - Fix UTF8Columns to work under Perl <= 5.8.0
        - Fix up new_result in ResultSet to avoid alias-related bugs
        - Made new/update/find handle 'single' rel accessor correctly
        - Fix NoBindVars to be safer and handle non-true bind values

0.07002 2006-09-14 21:17:32
        - fix quote tests for recent versions of SQLite
        - added reference implementation of Manual::Example
        - backported column_info_from_storage accessor from -current, but
        - fixed inflate_datetime.t tests/stringify under older Test::More
        - minor fixes for many-to-many relationship helpers
        - cleared up Relationship docs, and fixed some typos
        - use ref instead of eval to check limit syntax (to avoid issues with
          Devel::StackTrace)
        - update ResultSet::_cond_for_update_delete to handle more complicated
          queries
        - bugfix to Oracle columns_info_for
        - remove_columns now deletes columns from _columns

0.07001 2006-08-18 19:55:00
        - add directory argument to deploy()
        - support default aliases in many_to_many accessors.
        - support for relationship attributes in many_to_many accessors.
        - stop search_rs being destructive to attrs
        - better error reporting when loading components
        - UTF8Columns changed to use "utf8" instead of "Encode"
        - restore automatic aliasing in ResultSet::find() on nonunique queries
        - allow aliases in ResultSet::find() queries (in cases of relationships