@@ -11,11 +11,11 @@ requires 'SQL::Abstract'             => 1.20;
 requires 'SQL::Abstract::Limit'      => 0.101;
 requires 'Class::C3'                 => 0.13;
 requires 'Storable'                  => 0;
-requires 'Class::Data::Accessor'     => 0.01;
 requires 'Carp::Clan'                => 0;
 requires 'DBI'                       => 1.40;
 requires 'Module::Find'              => 0;
 requires 'Class::Inspector'          => 0;
+requires 'Class::Accessor::Grouped'  => 0;
 
 # Perl 5.8.0 doesn't have utf8::is_utf8()
 requires 'Encode'                    => 0 if ($] <= 5.008000);  
@@ -25,5 +25,7 @@ build_requires 'DBD::SQLite'         => 1.11;
 install_script 'script/dbicadmin';
 
 tests "t/*.t t/*/*.t";
+
+auto_install;
 
 WriteAll;
