@@ -14,7 +14,7 @@ __PACKAGE__->load_components(qw/
   PK
   Row
   ResultSourceProxy::Table
-  AccessorGroup/);
+  /);
 
 1;
 
@@ -49,8 +49,6 @@ The core modules currently are:
 =item L<DBIx::Class::Row>
 
 =item L<DBIx::Class::ResultSourceProxy::Table>
-
-=item L<DBIx::Class::AccessorGroup>
 
 =back
 
